# wasm-encryption-performance-test

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
src/: blowfish_cbc.rs  c2_chacha20.rs  chacha20_poly1305.rs  crypto_aes.rs  crypto_blowfish.rs  lib.rs
www/: index.html  index.js  package-lock.json  package.json
