[package]
name = "test-encrypting"
version = "0.1.0"
authors = ["Moritz Welsch <mwelsch@student.tgm.ac.at>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
rand = {version = "0.7.2" ,features = ["wasm-bindgen"]}
base64 = "0.10.1"
aes = "0.3.2"
blowfish = "0.4.0"
block-modes = "0.3.3"
hex = "0.4.0"
aes-gcm-siv = "0.2.0"
c2-chacha = "0.2.2"
rust-crypto-wasm = "0.3.1"
hex-literal = "0.2.1"
aead = "0.1.1"
chacha20poly1305 = "0.2.2"
poly1305 = "0.5.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
